objects/advpm__Advologix_Timeline_Object_List__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>System settings used by Advologix internally.</description>
    <fields>
        <fullName>advpm__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Index__c</fullName>
        <label>Index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Is_Standard_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Standard Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Object_Label__c</fullName>
        <label>Object Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Object_Name__c</fullName>
        <inlineHelpText>API Name of the Object which needs to be added to Timeline</inlineHelpText>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Related_Field_Name__c</fullName>
        <label>Related Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Advologix Timeline Object List</label>
</CustomObject>